syntax = "proto3";

package org.opensearch.dataprepper.plugins.kafka.buffer;

enum MessageFormat {
  MESSAGE_FORMAT_UNSPECIFIED = 0;
  MESSAGE_FORMAT_BYTES = 1;
}

message BufferData {
  /* The format of the message as it was written.
   */
  MessageFormat message_format = 1;

  /* The actual data. This is encrypted if key_id is present. Otherwise, it
   * is unencrypted data.
   */
  bytes data = 2;

  /* Indicates if data is encrypted or not.
   */
  optional bool encrypted = 3;

  /* The data key which encrypted the data field. This will be encrypted.
   * The consuming Data Prepper node must have the ability to decrypt this key.
   */
  optional bytes encrypted_data_key = 4;
}
